@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-06T00:41:55Z",
-  "count_outdated" : 642,
-  "uniques_outdated" : 132,
+  "timestamp" : "2022-10-10T16:12:26Z",
+  "count_outdated" : 643,
+  "uniques_outdated" : 133,
   "count" : 648,
   "uniques" : 134,
   "views" : [
-    {
-      "timestamp": "2022-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-05T00:00:00Z",
       "count": 5,
