@@ -1,3 +1,11 @@
+2022-10-10T16:12:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3220792409
+* notice: last 14d: unq all: 1 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 132 642 / 134 648
+* notice: next accum: outdated-unq outdated-all / unq all: 133 643 / 134 648
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-26] / []
+
 2022-10-06T00:41:55Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3193688230
 * notice: last 14d: unq all: 2 6
